# chat-app

./: .env.vault  .gitignore
backend/: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/routes/: auth.py  discord.py  website.py
backend/src/: server.ts
backend/src/controllers/: authControllers.ts
backend/src/routers/: authRouter.ts  authRoutes.ts
backend/src/types/: environment.d.ts  expressSession.d.ts
backend/types/: expressSession.d.ts
backend/utility/: config.py  utility.py
backend/utility/auth/: token.py
backend/utility/database/: models.py
backend/utility/encryption/: password.py
backend/utility/pydantic/: models.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: navbar.tsx
frontend/components/navbar/: index.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/landing/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/backdrop/: index.tsx
frontend/src/components/chat-input/: index.tsx
frontend/src/components/chat-navbar/: index.tsx
frontend/src/components/chat-sidebar/: index.tsx
frontend/src/components/footer/: index.tsx
frontend/src/contexts/: SessionContext.tsx  session.tsx
frontend/src/lib/: auth.ts
frontend/src/styles/: globals.css
frontend/src/types/: auth.ts  environment.d.ts  messages.ts  session.ts
(+9 files in other folders)
